--- a/assets/style.css
+++ b/assets/style.css
@@ -6,12 +6,14 @@ h1 {
   text-align: center
 }
 
+body {
+  background: #808080;
+}
+
 .container {
-  background: white;
   margin: 0 auto;
   display: flex;
-  flex-wrap: wrap;
-  /*border: 1px solid black;*/
+  flex-wrap: wrap
 }
 
 .container > div {
@@ -21,10 +23,13 @@ h1 {
   line-height: 100px;
   margin: 0 auto;
   text-align: center;
+  box-shadow: 2px 2px;
+  visibility: visible
   /*border-radius: 100%;
   font-size: 20px*/
 }
 
 aside {
-  float: right
+  float: right;
+
 }
