--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Slabo+27px');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed|Slabo+27px');
 
 h1 {
   font-family: 'Slabo 27px', serif;
-  font-size: 40px;
+  font-size: 80px;
   text-align: center
 }
 
@@ -20,11 +21,13 @@ body {
   width: 80px;
   height: 80px;
   border: 1px solid #8D99AE;
-  line-height: 100px;
+  line-height: 85px;
   margin: 0 auto;
   text-align: center;
   box-shadow: 2px 2px;
-  visibility: visible
+  visibility: visible;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 40px
   /*border-radius: 100%;
   font-size: 20px*/
 }
