Hid undo button until further debug

--- a/assets/style.css
+++ b/assets/style.css
@@ -82,5 +82,9 @@ button {
   height: 50px;
   border-radius: 50%;
   box-shadow: 3px 3px;
-  border: none
+  border: none;
+}
+
+.undo {
+  visibility: hidden
 }
